<resources>
    <string name="app_name">श्रीमद् भगवद्गीता</string>
    <string name="splash_screen_title">॥ श्रीमद् भगवद्गीता ॥</string>


    <string name="chapter_label_text">अध्याय</string>
    <string name="verse_label_text">श्लोक</string>

    <string name="chapter_meaning_text">कुरुक्षेत्र के युद्धस्थल में सैन्य निरीक्षण</string>
    <string name="chapter_summary_text">भगवद गीता का पहला अध्याय अर्जुन विशाद योग उन पात्रों और परिस्थितियों का परिचय कराता है जिनके कारण पांडवों और कौरवों के बीच महाभारत का महासंग्राम हुआ। यह अध्याय उन कारणों का वर्णन करता है जिनके कारण भगवद गीता का ईश्वरावेश हुआ। जब महाबली योद्धा अर्जुन दोनों पक्षों पर युद्ध के लिए तैयार खड़े योद्धाओं को देखते हैं तो वह अपने ही रिश्तेदारों एवं मित्रों को खोने के डर तथा फलस्वरूप पापों के कारण दुखी और उदास हो जाते हैं। इसलिए वह श्री कृष्ण को पूरी तरह से आत्मसमर्पण करते हैं। इस प्रकार, भगवद गीता के ज्ञान का प्रकाश होता है।</string>
    <string name="chapter_number_text">अध्याय</string>

    <!--    vp verse layout-->
    <string name="bhagavad_gita_text">॥ श्रीमद् भगवद्गीता ॥</string>
    <string name="chapter_name_text">अर्जुनविषादयोग</string>
    <string name="verse_number_text">१.१</string>
    <string name="verse_text">धृतराष्ट्र उवाच\nधर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः।\nमामकाः पाण्डवाश्र्चैव किमकुर्वत सञ्जय ॥१॥</string>
    <string name="synonyms_label">शब्दार्थ</string>
    <string name="synonyms_text">धृतराष्ट्र: उवाच - राजा धृतराष्ट्र ने कहा; धर्म-क्षेत्रे - धर्मभूमि (तीर्थस्थल) में; कुरु-क्षेत्रे -कुरुक्षेत्र नामक स्थान में; समवेता: - एकत्र ; युयुत्सवः - युद्ध करने की इच्छा से; मामकाः -मेरे पक्ष (पुत्रों); पाण्डवा: - पाण्डु के पुत्रों ने; च - तथा; एव - निश्चय ही; किम - क्या; अकुर्वत -किया; सञ्जय - हे संजय ।</string>
    <string name="translation_label">भावार्थ</string>
    <string name="translation_text">धृतराष्ट्र ने कहा - हे संजय! धर्मभूमि कुरुक्षेत्र में युद्ध की इच्छा से एकत्र हुए मेरे तथा पाण्डु के पुत्रों ने क्या किया ?</string>
    <string name="purport_label">तात्पर्य</string>
    <string name="purport_text">भगवद्गीता एक बहुपठित आस्तिक विज्ञान है जो गीता - महात्मय में सार रूप में दिया हुआ है । इसमें यह उल्लेख है कि मनुष्य को चाहिए कि वह श्रीकृष्ण के भक्त की सहायता से संवीक्षण करते हुए भगवद्गीता का अध्ययन करे और स्वार्थ प्रेरित व्याख्याओं के बिना उसे समझने का प्रयास करे । अर्जुन ने जिस प्रकार से साक्षात् भगवान् कृष्ण से गीता सुनी और उसका उपदेश ग्रहण किया, इस प्रकार की स्पष्ट अनुभूति का उदाहरण भगवद्गीता में ही है । यदि उसी गुरु-परम्परा से, निजी स्वार्थ से प्रेरित हुए बिना, किसी को भगवद्गीता समझने का सौभाग्य प्राप्त हो तो वह समस्त वैदिक ज्ञान तथा विश्र्व के समस्त शास्त्रों के अध्ययन को पीछे छोड़ देता है । पाठक को भगवद्गीता में न केवल अन्य शास्त्रों की सारी बातें मिलेंगी अपितु ऐसी बातें भी मिलेंगी जो अन्यत्र कहीं उपलब्ध नहीं हैं । यही गीता का विशिष्ट मानदण्ड है । स्वयं भगवान् श्रीकृष्ण द्वारा साक्षात् उच्चरित होने के कारण यह पूर्ण आस्तिक विज्ञान है ।\nमहाभारत में वर्णित धृतराष्ट्र तथा संजय की वार्ताएँ इस महान दर्शन के मूल सिद्धान्त का कार्य करती हैं । माना जाता है कि इस दर्शन की प्रस्तुति कुरुक्षेत्र के युद्धस्थल में हुई जो वैदिक युग से पवित्र तीर्थस्थल रहा है । इसका प्रवचन भगवान् द्वारा मानव जाति के पथ-प्रदर्शन हेतु तब किया गया जब वे इस लोक में स्वयं उपस्थित थे ।\nधर्मक्षेत्र शब्द सार्थक है, क्योंकि कुरुक्षेत्र के युद्धस्थल में अर्जुन के पक्ष में श्री भगवान् स्वयं उपस्थित थे । कौरवों का पिता धृतराष्ट्र अपने पुत्रों की विजय की सम्भावना के विषय में अत्यधिक संधिग्ध था । अतः इसी सन्देह के कारण उसने अपने सचिव से पूछा, " उन्होंने क्या किया ?" वह आश्र्वस्थ था कि उसके पुत्र तथा उसके छोटे भाई पाण्डु के पुत्र कुरुक्षेत्र की युद्ध भूमि में निर्णयात्मक संग्राम के लिए एकत्र हुए हैं । फिर भी उसकी जिज्ञासा सार्थक है । वह नहीं चाहता था की भाइयों में कोई समझौता हो, अतः वह युद्धभूमि में अपने पुत्रों की नियति (भाग्य, भावी) के विषय में आश्र्वस्थ होना चाह रहा था । चूँकि इस युद्ध को कुरुक्षेत्र में लड़ा जाना था, जिसका उल्लेख वेदों में स्वर्ग के निवासियों के लिए भी तीर्थस्थल के रूप में हुआ है अतः धृतराष्ट्र अत्यन्त भयभीत था कि इस पवित्र स्थल का युद्ध के परिणाम पर न जाने कैसा प्रभाव पड़े । उसे भली भाँति ज्ञात था कि इसका प्रभाव अर्जुन तथा पाण्डु के अन्य पुत्रों पर अत्यन्त अनुकूल पड़ेगा क्योंकि स्वभाव से वे सभी पुण्यात्मा थे । संजय श्री व्यास का शिष्य था, अतः उनकी कृपा से संजय धृतराष्ट्र ने उससे युद्धस्थल की स्थिति के विषय में पूछा ।\nपाण्डव तथा धृतराष्ट्र के पुत्र, दोनों ही एक वंश से सम्बन्धित हैं, किन्तु यहाँ पर धृतराष्ट्र के वाक्य से उसके मनोभाव प्रकट होते हैं । उसने जान-बूझ कर अपने पुत्रों पर धृतराष्ट्र के वाक्य से उसके मनोभाव प्रकट होते हैं । उसने जान-बूझ कर अपने पुत्रों को कुरु कहा और पाण्डु के पुत्रों को वंश के उत्तराधिकार से विलग कर दिया । इस तरह पाण्डु के पुत्रों अर्थात् अपने भतीजों के साथ धृतराष्ट्र की विशिष्ट मनःस्थिति समझी जा सकती है । जिस प्रकार धान के खेत से अवांछित पोधों को उखाड़ दिया जाता है उसी प्रकार इस कथा के आरम्भ से ही ऐसी आशा की जाती है कि जहाँ धर्म के पिता श्रीकृष्ण उपस्थित हों वहाँ कुरुक्षेत्र रूपी खेत में दुर्योधन आदि धृतराष्ट्र के पुत्र रूपी अवांछित पौधों को समूल नष्ट करके युधिष्ठिर आदि नितान्त धार्मिक पुरुषों की स्थापना की जायेगी । यहाँ धर्मक्षेत्रे तथा कुरुक्षेत्रे शब्दों की, उनकी एतिहासिक तथा वैदिक महत्ता के अतिरिक्त, यही सार्थकता है ।</string>
    <string name="previous_verse_text">पिछला श्लोक</string>
    <string name="next_verse_text">अगला श्लोक</string>
    <string name="search_label">श्लोक खोजें...</string>
    <string name="toolbar_back_button_content_description">पीछे</string>
    <string name="space">" "</string>
    <string name="colon">:</string>
    <string name="note_title_label">Title</string>
    <string name="note_title_hint">Three modes of material nature...</string>
    <string name="note_text_label">Note</string>
    <string name="note_text_hint">There are three modes of material nature.....</string>
    <string name="add_like">Add like</string>
    <string name="add_note">Add note</string>
    <string name="search_verse">Search verse</string>

    <string-array name="chapter_names_bhagavad_gita">
        <item>अर्जुनविषाद योग</item>
        <item>सांख्य योग</item>
        <item>कर्म योग</item>
        <item>ज्ञान योग</item>
        <item>कर्म संन्यास योग</item>
        <item>आत्मसंयम योग</item>
        <item>ज्ञानविज्ञान योग</item>
        <item>अक्षरब्रह्म योग</item>
        <item>राजविद्या योग</item>
        <item>विभूति योग</item>
        <item>विश्वरूप दर्शन योग</item>
        <item>भक्ति योग</item>
        <item>क्षेत्र क्षेत्रज्ञ विभाग योग</item>
        <item>गुणत्रयविभाग योग</item>
        <item>पुरुषोत्तम योग</item>
        <item>दैवासुर सम्पद्विभाग योग</item>
        <item>श्रद्धात्रयविभाग योग</item>
        <item>मोक्षसन्न्यास योग</item>
    </string-array>

</resources>