<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.verse.VerseDetailsFragment">

        <include
            android:id="@+id/app_bar_layout"
            layout="@layout/custom_toolbar" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            tools:context=".view.verse.VerseDetailsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                >

                <TextView
                    android:id="@+id/tvHeadingBhagavadgita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inknut_antiqua_bold"
                    android:text="@string/bhagavad_gita_text"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvChapterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inknut_antiqua_light"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHeadingBhagavadgita"
                    tools:text="@string/chapter_name_text" />

                <TextView
                    android:id="@+id/tvVerseNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inknut_antiqua_regular"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvChapterName"
                    tools:text="@string/verse_number_text" />

                <TextView
                    android:id="@+id/tvVerse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/inknut_antiqua_bold"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVerseNumber"
                    tools:text="@string/verse_text" />


                <TextView
                    android:id="@+id/tvSynonymsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/inknut_antiqua_bold"
                    android:text="@string/synonyms_label"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvVerse" />

                <TextView
                    android:id="@+id/tvSynonymsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/inknut_antiqua_regular"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSynonymsLabel"
                    tools:text="@string/synonyms_text" />

                <TextView
                    android:id="@+id/tvTranslationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/inknut_antiqua_bold"
                    android:text="@string/translation_label"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSynonymsText" />

                <TextView
                    android:id="@+id/tvTranslationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/inknut_antiqua_regular"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTranslationLabel"
                    tools:text="@string/translation_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_next_verse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/previous_verse_text"
            android:elevation="6dp"
            android:src="@drawable/ic_chapter_next"
            app:fabCustomSize="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedShape" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_prev_verse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/next_verse_text"
            android:elevation="6dp"
            android:src="@drawable/ic_chapter_prev"
            app:fabCustomSize="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedShape" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



