<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.main.ChapterDetailsBottomSheetDialogFragment">

    <View
        android:layout_width="64dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@color/gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_chapter_number_text" />

        <TextView
            android:id="@+id/tv_chapter_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inknut_antiqua_bold"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/chapter_number_text" />

        <TextView
            android:id="@+id/tv_chapter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inknut_antiqua_bold"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter_number_text"
            tools:text="@string/chapter_name_text" />

        <TextView
            android:id="@+id/tv_chapter_name_meaning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inknut_antiqua_regular"
            android:textSize="16sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter_name"
            tools:text="@string/chapter_meaning_text" />

        <TextView
            android:id="@+id/tv_chapter_name_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inknut_antiqua_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter_name_meaning"
            tools:text="@string/chapter_summary_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>